fixing alignment issue with google+ link

--- a/assets/style.css
+++ b/assets/style.css
@@ -88,7 +88,7 @@ pre {
 .highlight code > span:first-child {
   margin-left: -3px;
 }
-.google-profile img {
+.posts .google-profile img {
   margin-bottom: -3px;
 }
 .well.bottom {
